--- a/src/13-recommendation-systems-adult-census-income.ipynb
+++ b/src/13-recommendation-systems-adult-census-income.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "id": "a6af74e7",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "id": "51e58738",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "4          3900              40  United-States  <=50K  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "6ea792c2",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
        "(32561, 15)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "id": "8e8aae89",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "id": "70b784d3",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
        "Length: 32561, dtype: bool>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "id": "923df1c4",
    "metadata": {},
    "outputs": [
@@ -483,7 +483,7 @@
        "hours.per.week      40.0      45.0       99.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "id": "5bb99aea",
    "metadata": {},
    "outputs": [
@@ -528,7 +528,7 @@
        "np.int64(24)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "id": "025857c5",
    "metadata": {},
    "outputs": [],
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "id": "7fb0d34d",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
        "4              40  United-States  <=50K  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "id": "c877fab7",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
        "(30139, 9)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "id": "a2d69ab5",
    "metadata": {},
    "outputs": [],
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "id": "a323a40d",
    "metadata": {},
    "outputs": [],
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "id": "be5ee9c5",
    "metadata": {},
    "outputs": [],
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "id": "d86f1f42",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1010,7 @@
        "[5 rows x 73 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1073,22 +1073,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "7e631111",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mEl kernel se bloqueó al ejecutar código en la celda actual o en una celda anterior. \n",
-      "\u001b[1;31mRevise el código de las celdas para identificar una posible causa del error. \n",
-      "\u001b[1;31mHaga clic <a href='https://aka.ms/vscodeJupyterKernelCrash'>aquí</a> para obtener más información. \n",
-      "\u001b[1;31mVea Jupyter <a href='command:jupyter.viewOutput'>log</a> para obtener más detalles."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = df_encoded.drop(columns=['income'])\n",
     "y = df_encoded['income']"
@@ -1096,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "d030058c",
    "metadata": {},
    "outputs": [],
@@ -1108,13 +1096,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "f38f8808",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Funcion de recomendacion\n",
-    "# Busca personas similares y recomienda sus caracteristicas\n",
+    "# Busca personas similares que ganan mas de 50k y recomienda sus caracteristicas\n",
     "\n",
     "def recomendar_trayectoria(usuario_idx, df_original, X, y, top_k=5):\n",
     "    sims = similarity_matrix[usuario_idx]\n",
@@ -1125,8 +1113,136 @@
     "    ][:top_k]\n",
     "    \n",
     "    return df_original.iloc[similares_altos_ingresos][\n",
-    "        ['education', 'occupation', 'hours-per-week']\n",
+    "        ['education.num', 'occupation', 'hours.per.week']\n",
     "    ]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "39fed98d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Prueba simple: usar un usuario real del dataset\n",
+    "# Paso 1: elegir un usuario con ingreso bajo del mismo dataset\n",
+    "\n",
+    "usuario_test = df[df['income'] == 0].index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "67fa00b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age                            82\n",
+       "workclass                 Private\n",
+       "education.num                   9\n",
+       "occupation        Exec-managerial\n",
+       "race                        White\n",
+       "sex                        Female\n",
+       "hours.per.week                 18\n",
+       "native.country      United-States\n",
+       "income                          0\n",
+       "Name: 1, dtype: object"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[usuario_test]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "e9362dc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>education.num</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>hours.per.week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8023</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Machine-op-inspct</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29813</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Craft-repair</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29678</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Machine-op-inspct</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1655</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Craft-repair</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8733</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Machine-op-inspct</td>\n",
+       "      <td>40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       education.num         occupation  hours.per.week\n",
+       "8023               5  Machine-op-inspct              40\n",
+       "29813              5       Craft-repair              40\n",
+       "29678              4  Machine-op-inspct              40\n",
+       "1655               5       Craft-repair              37\n",
+       "8733               6  Machine-op-inspct              40"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recomendar_trayectoria(usuario_test, df, X, y)"
    ]
   }
  ],
@@ -1146,7 +1262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
